src/objects/Agreement_Accessory__c.object
<CustomObject>
    <fields>
        <fullName>Agreement__c</fullName>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Agreement Accessories</relationshipLabel>
        <relationshipName>Agreement_Accessories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Interested__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this accessories was opted by the channel partner or not</description>
        <label>Interested?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Price__c</fullName>
        <label>Invoice Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Agreement Accessories</relationshipLabel>
        <relationshipName>Agreement_Accessories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Estimated (purchase quantity)</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2013_Invoice_Price__c</fullName>
        <label>2013 Invoice Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_MSRP__c</fullName>
        <label>2013 MSRP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2013 Selected?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2014_Invoice_Price__c</fullName>
        <label>2014 Invoice Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_MSRP__c</fullName>
        <label>2014 MSRP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2014 Selected?</label>
        <type>Checkbox</type>
    </fields>
    <label>Agreement Accessory</label>
    <nameField>
        <displayFormat>AA-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Accessories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Accessory_Price_Requires_Interested</fullName>
        <active>true</active>
        <description>The user has to check &quot;Interested?&quot; checkbox for entering the price</description>
        <errorConditionFormula>AND(NOT(ISNULL(Invoice_Price__c)), Interested__c = false)</errorConditionFormula>
        <errorDisplayField>Interested__c</errorDisplayField>
        <errorMessage>Check Interested?</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Interested_Requires_Price</fullName>
        <active>true</active>
        <description>The user has to enter price if Interested? is checked.</description>
        <errorConditionFormula>AND(ISNULL(Invoice_Price__c), Interested__c)</errorConditionFormula>
        <errorDisplayField>Invoice_Price__c</errorDisplayField>
        <errorMessage>Enter price</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MAX_Deal_Requires_2013_Mot_Accessories</fullName>
        <active>true</active>
        <description>The Motorola Accessory invoice price cannot be blank if the user opts in for an accessory.</description>
        <errorConditionFormula>AND( Product_Type__c = &apos;Accessory-MOTO&apos;, X2013_Selected__c,  ISNULL(X2013_Invoice_Price__c))</errorConditionFormula>
        <errorDisplayField>X2013_Invoice_Price__c</errorDisplayField>
        <errorMessage>Invoice price for 2013 is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MAX_Deal_Requires_2014_Mot_Accessories</fullName>
        <active>true</active>
        <description>The Motorola Accessory invoice price cannot be blank if the user opts in for an accessory.</description>
        <errorConditionFormula>AND( Product_Type__c = &apos;Accessory-MOTO&apos;, X2014_Selected__c,  ISNULL(X2014_Invoice_Price__c))</errorConditionFormula>
        <errorDisplayField>X2014_Invoice_Price__c</errorDisplayField>
        <errorMessage>Invoice price for 2014 is required</errorMessage>
    </validationRules>
</CustomObject>